[gd_scene load_steps=4 format=3 uid="uid://dxrdsb1actd46"]

[ext_resource type="Script" path="res://scripts/alias_list.gd" id="1_ustvo"]
[ext_resource type="Script" path="res://scripts/tag_alias_instance.gd" id="1_wj4ri"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jq3gv"]
bg_color = Color(0.211765, 0.282353, 0.396078, 1)

[node name="TagAliasInstance" type="PanelContainer"]
custom_minimum_size = Vector2(240, 330)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_jq3gv")
script = ExtResource("1_wj4ri")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AliasLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Alias Name"
horizontal_alignment = 1

[node name="AliasList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
select_mode = 1
script = ExtResource("1_ustvo")

[node name="InteractContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AliasLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/InteractContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="AddAliasButton" type="Button" parent="MarginContainer/VBoxContainer/InteractContainer"]
layout_mode = 2
mouse_filter = 1
text = "Add"
